[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Tauri Programme within The Commons Conservancy"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1", features = ["api-all"] }
window-shadows = { path = "../../../" }

[build-dependencies]
tauri-build = { version = "1" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
